...
      },
    },
  },
  configurations: {
    'ios.sim.debug': {
      device: 'simulator',
      app: 'ios.debug',
    },
    'ios.sim.debug.se': {
      device: 'simulator.se',
      app: 'ios.debug',
    },
    'ios.sim.testing': {
...
